k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  labels:
    app: frontend
    version: green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: green

  template:
    metadata:
      labels:
        app: frontend
        version: green

    spec:
      containers:
        - name: frontend-green

          image: bluegreen-frontend-green:1.1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3200

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3200
            initialDelaySeconds: 10
            periodSeconds: 20
